2006-10-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site, nl, fr *html: Change occurrences of @DOC@/v2.[468] to
	@DOC@/latest, @DOC@/v2.[579] to @DOC@/latest.  Add `stable' link
	to lilypond.org website, update `latest' link to point to 2.9.
	
2006-10-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): 2.9.20

2006-09-17  John Mandereau  <john.mandereau@free.fr>

	* fr/index.html: remove sponsoring section.

2006-09-17  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/menu-entries.py: idem.

	* site/index.html: remove sponsoring section.

2006-09-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/index.html: Remove broken link to canadian mirror.

2006-09-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): 2.9.17

2006-08-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.16.

2006-08-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/stable.ihtml: slackware 10.2, 2.8.6

2006-08-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): 2.8.6

2006-08-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/devel/index.html: remove uwaterloo link.

2006-08-04  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/old-news.html (href): 2.9.14.

2006-07-25  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/stable.ihtml: update slackware download link.

2006-07-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/devel/participating/call-for-help.html: update to current state.

2006-07-23  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): 2.9.13

2006-07-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): 2.9.12

2006-07-12  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably):  2.9.11. 

2006-07-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/stable.ihtml: use x86 for darwin intel URL.

2006-06-22  Han-Wen Nienhuys  <hanwen@lilypond.org>
