@@ -21,6 +21,26 @@
     <td>
       <dl>
 
+      
+<dt><b>LilyPond 2.9.17 available</b> - <em>September 2, 2006</em>
+
+<dd>
+This release fixes many bugs. Among others, MacOS X QuickTime now
+ honors tempo changes are in the MIDI output.  (<a
+ href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
+ href="install/#2.9">Download</a>) </dd>
+
+
+ 
+<dt><b>LilyPond 2.9.16 available</b> - <em>August 25, 2006</em>
+
+<dd>
+In this release, chords may be partially tied and lyric extenders have
+tunable padding. Moreover, many bugs were fixed
+  (<a
+href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
+href="install/#2.9">Download</a>)
+</dd>
 
 <dt><b>LilyPond 2.9.15 available</b> - <em>August 20, 2006</em>
 
