@@ -1,3 +1,7 @@
+2006-10-09  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/news.ihtml (Preferably): 2.9.22
+
 2006-10-08  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site, nl, fr *html: Change occurrences of @DOC@/v2.[468] to
